fix number values for opacity and z-index

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,10 @@ input {
   margin: 10px;
 }
 
+.classNameInput {
+  width: 80%;
+}
+
 .submitButton {
   background: transparent;
   color: white;
